--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,4 @@
 ---
-import "../styles/global.css";
-
 import Layout from "../layouts/Layout.astro";
 import URILink from "../components/utils/URILink.astro";
 import Indent from "../components/utils/Indent.astro";
@@ -9,15 +7,15 @@ import Indent from "../components/utils/Indent.astro";
 <Layout>
   <main>
     <section>
-      <h1>profile:</h1>
+      <h1>Profile:</h1>
 
       <Indent>
-        <h2>affiliation:</h2>
+        <h2>Affiliation:</h2>
         <Indent>
           <p>筑波大学 情報学群 情報科学類 (24年入学)</p>
         </Indent>
 
-        <h2>accounts:</h2>
+        <h2>Accounts:</h2>
         <Indent>
           <h3>Twitter:</h3>
           <Indent>
@@ -32,9 +30,9 @@ import Indent from "../components/utils/Indent.astro";
     </section>
 
     <section>
-      <h1>pages:</h1>
+      <h1>Pages:</h1>
       <Indent>
-        <h2>articles:</h2>
+        <h2>Articles:</h2>
         <Indent>
           <URILink text="articles" uri="articles" />
         </Indent>
