--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import URILink from "../components/utils/URILink.astro";
 import Indent from "../components/utils/Indent.astro";
 ---
 
-<Layout>
+<Layout title="ゃーのホームページ">
   <main>
     <section>
       <h1>Profile:</h1>
