--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,11 @@
 ---
 import "../styles/global.css";
+
+interface Props {
+  title: string;
+}
+
+const { title }: Props = Astro.props;
 ---
 
 <!doctype html>
@@ -9,7 +15,7 @@ import "../styles/global.css";
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>ゃーのホームページ</title>
+    <title>{title}</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
