--- a/src/pages/articles.astro
+++ b/src/pages/articles.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
 import Indent from "../components/utils/Indent.astro";
 ---
 
-<Layout>
+<Layout title="ゃーのブログ">
   <main>
     <section>
       <Indent>
