--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --ya-lighter-hover: #2cf;
   --hover: #2ac;
   --ya-dark: #2b2b2b;
   --ya-black: #171717;
