feat: article thumbnail style

--- a/src/components/article/Tag.astro
+++ b/src/components/article/Tag.astro
@@ -12,6 +12,7 @@ const { text } = Astro.props;
 
 <style>
   span {
+    display: inline-block;
     background: var(--ya-black);
     color: var(--ya-green);
     @media (prefers-color-scheme: dark) {
