--- a/src/components/utils/URILink.astro
+++ b/src/components/utils/URILink.astro
@@ -13,6 +13,7 @@ const { text, uri }: Props = Astro.props;
 
 <style>
   .link {
+    display: inline-block;
     background: var(--ya-black);
     color: var(--ya-green);
     @media (prefers-color-scheme: dark) {
