--- a/src/pages/articles.astro
+++ b/src/pages/articles.astro
@@ -4,10 +4,15 @@ const articles = await getCollection("articles");
 
 import Layout from "../layouts/Layout.astro";
 import Thumbnail from "../components/article/Thumbnail.astro";
+import URILink from "../components/utils/URILink.astro";
 ---
 
 <Layout title="ゃーのブログ">
   <main>
+    <section>
+      <URILink text="Top" uri="/" />
+    </section>
+
     <section>
       <h1>Articles</h1>
       <ul>
