--- a/src/pages/articles/[slug].astro
+++ b/src/pages/articles/[slug].astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import Tag from "../../components/article/Tag.astro";
+import URILink from "../../components/utils/URILink.astro";
 
 import { getImage } from "astro:assets";
 import { getCollection } from "astro:content";
@@ -20,6 +21,10 @@ const { Content } = await render(article);
 
 <Layout title={article.data.title}>
   <main>
+    <section>
+      <URILink text="Articles" uri="/articles" />
+    </section>
+
     <section>
       <h1>{article.data.title}</h1>
       <time datetime={article.data.date}>{article.data.date}</time>
