feat: tag search from article slug page

--- a/src/components/article/Tag.astro
+++ b/src/components/article/Tag.astro
@@ -1,14 +1,17 @@
 ---
 interface Props {
   text: string;
+  uri?: string;
   class?: string;
 }
 
-const { text, class: className = "" } = Astro.props;
+const { text, uri, class: className = "" } = Astro.props;
 ---
 
 <span class={`default-style ${className}`}>
-  {text}
+  <a href={uri}>
+    {text}
+  </a>
 </span>
 
 <style>
