--- a/src/pages/articles.astro
+++ b/src/pages/articles.astro
@@ -7,7 +7,6 @@ const articles = await getCollection("articles");
 import Layout from "../layouts/Layout.astro";
 import Thumbnail from "../components/article/Thumbnail.astro";
 import URILink from "../components/utils/URILink.astro";
-import Tag from "../components/article/Tag.astro";
 ---
 
 <Layout title="ゃーのブログ">
@@ -45,7 +44,7 @@ import Tag from "../components/article/Tag.astro";
                 date={article.data.date}
                 description={article.data.description}>
                 {article.data.tags?.map((tag) => (
-                  <Tag class:list={["article-tag"]} text={tag} />
+                  <span class="article-tag">{tag}</span>
                 ))}
               </Thumbnail>
             </section>
@@ -179,5 +178,20 @@ import Tag from "../components/article/Tag.astro";
   .tag-button.selected:hover {
     color: var(--ya-green);
     background: black;
+  }
+
+  .article-tag {
+    display: inline-block;
+    background: var(--ya-less-darker-green);
+    color: black;
+    margin: 0.2em;
+    font-size: 1em;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    border-radius: 0.2em;
+  }
+
+  .article-tag.selected {
+    background: var(--hover);
   }
 </style>
