--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,12 @@
 import Layout from "../layouts/Layout.astro";
 import URILink from "../components/utils/URILink.astro";
 import Indent from "../components/utils/Indent.astro";
+import Header from "../components/Header.astro";
 ---
 
 <Layout title="ゃーのホームページ">
+  <Header />
+
   <main>
     <section>
       <h1>Profile:</h1>
