--- a/src/pages/articles.astro
+++ b/src/pages/articles.astro
@@ -6,15 +6,13 @@ const articles = await getCollection("articles");
 
 import Layout from "../layouts/Layout.astro";
 import Thumbnail from "../components/article/Thumbnail.astro";
-import URILink from "../components/utils/URILink.astro";
+import Header from "../components/Header.astro";
 ---
 
 <Layout title="ゃーのブログ">
-  <main>
-    <section>
-      <URILink text="Top" uri="/" />
-    </section>
+  <Header />
 
+  <main>
     <section>
       <h1>Articles</h1>
 
