feat: add header to article slug

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 <header>
-  <img src="icon.svg" alt="site icon" style="width: 3em;" />
+  <img src="/icon.svg" alt="site icon" style="width: 3em;" />
   <a href="/">reversed-r.dev</a>
 </header>
 
