--- a/src/pages/articles/[slug].astro
+++ b/src/pages/articles/[slug].astro
@@ -119,7 +119,7 @@ const { Content } = await render(article);
     }
 
     pre {
-      background: var(--ya-dark);
+      background: var(--ya-codeblock-dark);
       padding: 0.5em;
       border-radius: 0.5em;
       overflow: scroll;
@@ -129,7 +129,7 @@ const { Content } = await render(article);
       code {
         display: inline-block;
         overflow-wrap: break-all;
-        background: var(--ya-dark);
+        background: var(--ya-codeblock-dark);
 
         color: white;
       }
