--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@
   --foreground: #1b8;
   --ya-lighter-hover: #2cf;
   --hover: #2ac;
+  --ya-codeblock-dark: #24292e;
   --ya-dark: #2b2b2b;
   --ya-black: #171717;
   --ya-green: #1b8;
