--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,14 +5,16 @@ interface Props {
   title?: string;
   description?: string;
   image?: string;
-  url?: string;
+  path?: string;
 }
+
+const baseURL = "https://reversed-r.dev";
 
 const {
   title = "ゃーのホームページ",
   description = "ゃーのホームページです",
   image = "/icon.svg",
-  url = "https://reversed-r.dev",
+  path = "/",
 } = Astro.props;
 ---
 
@@ -36,8 +38,8 @@ const {
     <meta property="og:type" content="website" />
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
-    <meta property="og:image" content={image} />
-    <meta property="og:url" content={url} />
+    <meta property="og:image" content={baseURL + image} />
+    <meta property="og:url" content={baseURL + path} />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
