fix: articles ogp text

--- a/src/pages/articles.astro
+++ b/src/pages/articles.astro
@@ -7,7 +7,7 @@ import Thumbnail from "../components/article/Thumbnail.astro";
 import Header from "../components/Header.astro";
 ---
 
-<Layout title="ゃーのブログ">
+<Layout title="ゃーのブログ" description="ゃーの記事一覧です" path="/articles">
   <Header />
 
   <main>
