fix: ogp article title

--- a/src/pages/articles/[slug].astro
+++ b/src/pages/articles/[slug].astro
@@ -20,7 +20,7 @@ const { article } = Astro.props;
 const { Content } = await render(article);
 ---
 
-<Layout title="ゃーのブログ" description={article.data.description} path={`/articles/${article.slug}`}>
+<Layout title={article.data.title} description={article.data.description} path={`/articles/${article.slug}`}>
   <Header />
 
   <main>
