--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const baseURL = "https://reversed-r.dev";
 const {
   title = "ゃーのホームページ",
   description = "ゃーのホームページです",
-  image = "/icon.svg",
+  image = "/icon.png",
   path = "/",
 } = Astro.props;
 ---
@@ -23,7 +23,7 @@ const {
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
 
