feat: add article nec express r120g setup

--- a/src/pages/articles/[slug].astro
+++ b/src/pages/articles/[slug].astro
@@ -142,6 +142,16 @@ const { Content } = await render(article);
     a:hover {
       color: var(--ya-lighter-hover);
     }
+
+    img {
+      width: 90%;
+      max-width: 400px;
+      height: auto;
+    }
+
+    li {
+      margin-left: 1em;
+    }
   }
 
   article {
