--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,7 +49,7 @@ const {
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content={baseURL + image} />
-    <meta name="twitter:image:alt" content="ゃーのホームページのアイコン" />
+    <meta name="twitter:image:alt" content="OGP画像" />
   </head>
   <body>
     <slot />
